<resources>
    <string name="app_name">Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="tue_february_9">Tue, February 9</string>
    <string name="note_title">Note Title</string>
    <string name="notes">Notes Subtitle</string>
    <string name="type_note_here">Type note here…</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good AfterNoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="miscellaneous">miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="add_url">Add URL</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_url">Enter URL</string>
    <string name="enter_valid_url">Enter Valid URL</string>
    <string name="save_your_changes_or_discard_them">Save your changes or discard them?</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="share_note">Share Note</string>
    <string name="sorry_can_not_be_share">Sorry can not be share</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="you_have_no_notes">You have no notes</string>
</resources>