<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_15sdp"
    android:elevation="@dimen/_2sdp"
    app:cardBackgroundColor="#717171"
    app:cardCornerRadius="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_link"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            android:contentDescription="@string/app_name" />

        <com.example.notes.customobject.TextViewCustom
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/add_url"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/img_link"
            app:layout_constraintStart_toEndOf="@id/img_link"
            app:layout_constraintTop_toTopOf="@id/img_link" />

        <com.example.notes.customobject.EditTextCustom
            android:id="@+id/edt_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/enter_url"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintTop_toBottomOf="@id/img_link" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/edt_url">

            <com.example.notes.customobject.TextViewCustom
                android:id="@+id/txt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/cancel"
                android:textColor="@color/red" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/shape_view" />

            <com.example.notes.customobject.TextViewCustom
                android:id="@+id/txt_add_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/add"
                android:textColor="@color/white" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>