<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:elevation="@dimen/_2sdp"
    app:cardBackgroundColor="#717171"
    app:cardCornerRadius="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.notes.customobject.TextViewCustom
            android:id="@+id/txt_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/save_your_changes_or_discard_them"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/txt_warning">

            <com.example.notes.customobject.TextViewCustom
                android:id="@+id/txt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view1"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/shape_view" />

            <com.example.notes.customobject.TextViewCustom
                android:id="@+id/txt_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/discard"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view2"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/shape_view" />

            <com.example.notes.customobject.TextViewCustom
                android:id="@+id/txt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>