<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        tools:context=".activity.CreateNoteActivity">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/_10sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/shape_img"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_baseline_arrow_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/img_done"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/shape_img"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_baseline_done"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <com.example.notes.customobject.TextViewCustom
                    android:id="@+id/txt_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/tue_february_9"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_back" />

                <com.example.notes.customobject.EditTextCustom
                    android:id="@+id/edt_note_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/iran_sans_mobile_fa"
                    android:hint="@string/note_title"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint"
                    app:layout_constraintTop_toBottomOf="@id/txt_date" />

                <com.example.notes.customobject.EditTextCustom
                    android:id="@+id/edt_notes_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@null"
                    android:fontFamily="@font/iran_sans_mobile_fa"
                    android:hint="@string/notes"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/_2sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/view_subtitle_indicator"
                    app:layout_constraintTop_toBottomOf="@id/edt_note_title" />

                <View
                    android:id="@+id/view_subtitle_indicator"
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:background="@drawable/shape_subtitle_indicator"
                    app:layout_constraintBottom_toBottomOf="@id/edt_notes_subtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/edt_notes_subtitle" />

                <com.example.notes.customobject.EditTextCustom
                    android:id="@+id/edt_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@null"
                    android:fontFamily="@font/iran_sans_mobile_fa"
                    android:gravity="top"
                    android:hint="@string/type_note_here"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minHeight="@dimen/_100sdp"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edt_notes_subtitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <include layout="@layout/item_bottom_sheet" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>