<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        tools:context=".activity.MainActivity">

        <com.example.notes.customobject.TextViewCustom
            android:id="@+id/txt_my_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/my_notes"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.notes.customobject.TextViewCustom
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/good_morning"
            android:textColor="@color/white"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_my_notes" />

        <com.example.notes.customobject.EditTextCustom
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/shape_edt"
            android:drawableStart="@drawable/ic_baseline_search"
            android:drawablePadding="@dimen/_8sdp"
            android:drawableTint="@color/white"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/txt_time" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_notes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:clipToPadding="false"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/layout_quick_actions"
            app:layout_constraintTop_toBottomOf="@id/edt_search" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_quick_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#424141"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/img_add_image"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:src="@drawable/ic_baseline_wallpaper"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/img_add_web_link"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_language"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_add_image"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/img_add_notes"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_control_point"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_add_web_link"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_add_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_baseline_add"
            android:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>